<resources>
    <string name="app_name">Lab1</string>
    <string name="fotgot_password_msg">I forgot my password</string>
    <string name="login_text">Login</string>
    <string name="cancel_text">Cancel</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="main_login_here_we_go">Login! Here we go</string>
</resources>
