<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="codepath.gauravbajaj.com.lab1.MainActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignBottom="@+id/textView"
        android:layout_alignTop="@+id/credentials"
        android:layout_marginBottom="@dimen/main_credential_bg_view_margin_bottom"
        android:layout_marginTop="@dimen/main_credential_bg_view_margin_top"
        android:background="@color/main_credentials_bg_color" />

    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/main_login_here_we_go"
            android:textColor="#ffffff"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name_hint"
            android:textColorHint="@color/main_credentials_hint_text_color" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@color/main_credentials_hint_text_color" />

    </LinearLayout>

    <Button
        android:id="@+id/cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/credentials"
        android:layout_gravity="left"
        android:text="@string/cancel_text" />

    <Button
        android:id="@+id/login"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/credentials"
        android:layout_gravity="right"
        android:text="@string/login_text" />

    <TextView

        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cancel"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/fotgot_password_msg"
        android:textColor="#0000ff"
        android:textSize="22sp" />

</RelativeLayout>
